# ScapyWebUI

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  biome.json  cspell.yml  gulpfile.coffee  justfile  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  test_main.py
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-approve.yml
app/: main.py
app/static/components/: route-graph.js  trace-route.js
app/templates/: index.html
coffee/: main.coffee
features/: traceroute.feature  traceroute.py
static/: main.js
static/components/: route-graph.js  route-table.js
templates/: index.html
