[project]
name = "scapywebui"
version = "0.1.0"
description = "API to interact with Scapy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography==46.0.4",
    "ecdsa==0.19.1",
    "flask==3.1.2",
    "numpy==2.4.1",
    "pytest-playwright==0.7.2",
    "ruff==0.14.14",
    "scapy==2.7.0",
]
