[project]
name = "scapywebui"
version = "0.1.0"
description = "API to interact with Scapy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography==46.0.5",
    "ecdsa==0.19.1",
    "flask==3.1.3",
    "flask-compress==1.23",
    "numpy==2.4.1",
    "pytest-playwright==0.7.1",
    "ruff==0.14.2",
    "scapy==2.7.0",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
